; ModuleID = '/home/carl/AnghaBench/libgit2/tests/odb/backend/extr_simple.c_setup_backend.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/odb/backend/extr_simple.c_setup_backend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_odb = common dso_local global i32 0, align 4
@_repo = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @setup_backend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_backend(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @build_fake_backend(i32** %3, i32* %4)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32, i32* @_repo, align 4
  %8 = call i32 @git_repository_odb__weakptr(i32* @_odb, i32 %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32, i32* @_odb, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @git_odb_add_backend(i32 %10, i32* %11, i32 10)
  %13 = call i32 @cl_git_pass(i32 %12)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @build_fake_backend(i32**, i32*) #1

declare dso_local i32 @git_repository_odb__weakptr(i32*, i32) #1

declare dso_local i32 @git_odb_add_backend(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
